@@ -19,6 +19,9 @@ Generator-specific seed. See section titled PLUGIN SEEDS below for
 more information. The \-s option must immediately follow the generator
 .IP "-l|--list-generators"
 Print a terse list of compiled in generators
+.IP "-n|--benchmark"
+Occasionally print samplerate to stdout. Only counts successful value
+queries, not AT commands or NO DATA/? responses.
 .IP "-q|--logfile <logfile>"
 Write all serial comms to this logfile
 .IP "-o|--launch-logger"
