@@ -4,6 +4,7 @@ Version 0.16
  Sim Cycle gen: provide pids up to 0x60
  build: Option to use systemwide sqlite3 lib instead of local copy
  Sim: Support protocols with ATSP{A,}{0-9,A-C}, show appropriate headers
+ Sim: Add --benchmark option for occasional updates
 
 Version 0.15 (released 2010-06-18)
  Sim: Always return errors in groups of three, padded if necessary
